<resources>
    <string name="app_name">ShoeStore</string>
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="user_name_input">example@email.com</string>
    <string name="password_input">Your password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="register_button">Register</string>
    <string name="welcome">Welcome</string>
    <string name="next_button">Next</string>
    <string name="store_slogan">Bring power to your steps</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction_detail">In shoe list screen, press add button to enter shoe detail screen, press three dots in the upper right corner to logout.\n\nIn shoe detail screen, input shoe name, company, shoe size and description, press save button or cancel button.
    </string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Company name</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_description">Shoe description:</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="logout">Logout</string>
    <string name="Shoe_Store_Login">Shoe Store Login</string>
    <string name="Shoe_Store_Welcome">Shoe Store Welcome</string>
    <string name="Shoe_Store_Instruction">Shoe Store Instruction</string>
    <string name="Shoe_Store_List">Shoe Store List</string>
    <string name="Add_Shoe_Detail">Add Shoe Detail</string>
</resources>
