<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Linear layout is used here because only a simple layout is needed.
     There are two labels, two text input fields and two buttons, and they can be arranged in vertical way -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name_label"
            style="@style/label_text_style"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/user_name_input"
            style="@style/input_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:text="@string/user_name_input"
            android:textSize="@dimen/input_text_size" />

        <TextView
            android:id="@+id/password_label"
            style="@style/label_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:paddingTop="@dimen/big_padding"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_input"
            style="@style/input_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password_input" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/button_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:text="@string/sign_in_button" />

        <Button
            android:id="@+id/register_button"
            style="@style/button_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:text="@string/register_button" />

    </LinearLayout>

</layout>