<?xml version="1.0" encoding="utf-8"?>

<!-- Linear layout is used here because only a simple layout is needed -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shoe_name_text"
            style="@style/input_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textAlignment="center" />
    
        <TextView
            android:id="@+id/shoe_company_text"
            style="@style/label_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/shoe_company" />

        <TextView
            android:id="@+id/shoe_size_text"
            style="@style/label_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/shoe_size" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/small_padding"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

</layout>