<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Linear layout is used here because only a simple layout is needed. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="@dimen/welcome_text_size" />

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/store_slogan"
            android:textAlignment="center"
            android:textSize="@dimen/slogan_text_size" />

        <Button
            android:id="@+id/welcome_next_button"
            style="@style/button_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_margin"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:layout_marginEnd="@dimen/layout_right_margin"
            android:text="@string/next_button" />
    </LinearLayout>

</layout>